{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 16,
  "lineage": "b953e5a7-f1c0-09f0-1ee2-99f0e127f81e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003634241a8fcdec0",
            "arn": "arn:aws:ec2:us-west-2:499191346827:instance/i-05ca70e6807d9919d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ca70e6807d9919d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0354d42aa0666df75",
            "private_dns": "ip-192-168-0-136.us-west-2.compute.internal",
            "private_ip": "192.168.0.136",
            "public_dns": "ec2-52-12-88-202.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.88.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-060512e21bac05d1b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0531377b8f180d26d",
            "tags": {
              "Name": "test-tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0621905e5598da6c3"
            ]
          },
          "depends_on": [
            "aws_security_group.ssh",
            "aws_subnet.Public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e755ae8b6725dd85",
            "owner_id": "499191346827",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-07763a452e60fed1e"
          },
          "depends_on": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06740c0f1137a2ddc",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_table"
            },
            "vpc_id": "vpc-07763a452e60fed1e"
          },
          "depends_on": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fec47542ff047e3b",
            "owner_id": "499191346827",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e755ae8b6725dd85",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRoute-Table"
            },
            "vpc_id": "vpc-07763a452e60fed1e"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030fee721a09f0fa6",
            "route_table_id": "rtb-06740c0f1137a2ddc",
            "subnet_id": "subnet-0e47b707d315dae33"
          },
          "depends_on": [
            "aws_route_table.PrivateRT",
            "aws_subnet.Private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cd497874de6041c",
            "route_table_id": "rtb-0fec47542ff047e3b",
            "subnet_id": "subnet-0531377b8f180d26d"
          },
          "depends_on": [
            "aws_route_table.PublicRT",
            "aws_subnet.Public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-0bd1f5a6b5ea36a44",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd1f5a6b5ea36a44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "for mysql",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-07763a452e60fed1e"
          },
          "depends_on": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:security-group/sg-0621905e5598da6c3",
            "description": "enable 22 port",
            "egress": [],
            "id": "sg-0621905e5598da6c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "enable 22 port for ec2 ",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "enable ssh",
            "name_prefix": null,
            "owner_id": "499191346827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "enable-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07763a452e60fed1e"
          },
          "depends_on": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-0e47b707d315dae33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0e47b707d315dae33",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-07763a452e60fed1e"
          },
          "depends_on": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:subnet/subnet-0531377b8f180d26d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0531377b8f180d26d",
            "map_public_ip_on_launch": false,
            "owner_id": "499191346827",
            "tags": {
              "Name": "Public-subnet"
            },
            "vpc_id": "vpc-07763a452e60fed1e"
          },
          "depends_on": [
            "aws_vpc.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499191346827:vpc/vpc-07763a452e60fed1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0adfe0261c08cf8fa",
            "default_route_table_id": "rtb-0912a97b6da243694",
            "default_security_group_id": "sg-0f574157b37e9d5bd",
            "dhcp_options_id": "dopt-6757c91f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07763a452e60fed1e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0912a97b6da243694",
            "owner_id": "499191346827",
            "tags": {
              "Name": "vpctf"
            }
          }
        }
      ]
    }
  ]
}